--- a/WebApp/Views/Admin/Index.cshtml
+++ b/WebApp/Views/Admin/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    var avgRating = ViewBag.AvgRating as double?;
+    var userCount = ViewBag.UserCount as int?;
 }
 <div class="admin-margin">
     <div class="container mt-5">
@@ -51,7 +53,7 @@
                                 <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
                                     Total User
                                 </div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@userCount</div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-users fa-2x text-gray-300"></i>
@@ -72,12 +74,12 @@
                                 </div>
                                 <div class="row no-gutters align-items-center">
                                     <div class="col-auto">
-                                        <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">2.5</div>
+                                        <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">@avgRating</div>
                                     </div>
                                     <div class="col">
                                         <div class="progress progress-sm mr-2">
                                             <div class="progress-bar bg-warning" role="progressbar"
-                                                 style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                                 style="width: @(avgRating/5)" aria-valuenow="@(avgRating/5*100)" aria-valuemin="0"
                                                  aria-valuemax="100"></div>
                                         </div>
                                     </div>
@@ -201,10 +203,10 @@
         var myPieChart = new Chart(ctx2, {
             type: "doughnut",
             data: {
-                labels: ["Direct", "Social", "Referral"],
+                labels: ["Food", "Drink", "Combo"],
                 datasets: [{
                     data: [55, 30, 15],
-                    backgroundColor: ["#4e73df", "#1cc88a", "#36b9cc"]
+                    backgroundColor: ["#FF6B6B", "#4D96FF", "#F9C74F"]
                 }]
             },
             options: {
