--- a/WebApp/Views/Customer/Profile.cshtml
+++ b/WebApp/Views/Customer/Profile.cshtml
@@ -28,8 +28,10 @@
                                     <div class="mb-4">
                                         <h5 class="mb-4">Personal Information</h5>
                                         <div class="row g-3">
-                                            <input class="form-control border-0 border-bottom rounded-0" asp-for="Id" value="@Model.Id" type="password" hidden>
+                                            <input class="form-control border-0 border-bottom rounded-0" asp-for="Id" value="@Model.Id" hidden>
                                             <input class="form-control border-0 border-bottom rounded-0" asp-for="PasswordHash" value="@Model.PasswordHash" type="password" hidden>
+                                            <input class="form-control border-0 border-bottom rounded-0" asp-for="IsEmailConfirmed" value="@Model.IsEmailConfirmed" hidden>
+                                            <input class="form-control border-0 border-bottom rounded-0" asp-for="Role" value="@Model.Role" hidden>
 
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3">
