[HuyLTM - 2025/03/30] Update price VND

--- a/WebApp/Views/Home/ProductDetail.cshtml
+++ b/WebApp/Views/Home/ProductDetail.cshtml
@@ -1,4 +1,5 @@
-﻿@model Product
+﻿@using System.Globalization
+@model Product
 @{
     ViewData["Title"] = "Product Detail";
     var feedbacks = ViewBag.Feedbacks as List<Feedback>;
@@ -100,7 +101,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <span class="h5">@Model.Price.ToString("C", new CultureInfo("en-US"))</span>
+                        <span class="h5">@Model.Price.ToString("C", new CultureInfo("vi-VN"))</span>
                     </div>
 
                     <dl class="row">
@@ -109,8 +110,8 @@
 
                     </dl>
                     <hr />
-                    <a asp-action="" asp-controller="" class="btn btn-success shadow-0"> Buy now </a>
-                    <a asp-action="" asp-controller="" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </a>
+                    <a asp-action="Checkout" asp-controller="Customer" class="btn btn-success shadow-0"> Buy now </a>
+                    <a asp-action="CartIndex" asp-controller="Customer" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </a>
                     @if (Model != null)
                     {
                         <partial name="_Feedback" model="Model" />
