--- a/WebApp/Views/Home/Menu.cshtml
+++ b/WebApp/Views/Home/Menu.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Product>
+﻿@using System.Globalization
+@model IEnumerable<Product>
 @{
     var randomFoodItems = Model.Where(p => p.Category?.Name == "Food").OrderBy(x => x.Name).ToList();
     var randomDrinkItems = Model.Where(p => p.Category?.Name == "Drink").OrderBy(x => x.Name).ToList();
@@ -77,7 +78,7 @@
                                                 <div class="w-100 d-flex flex-column text-start ps-4">
                                                     <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                         <span>@food.Name</span>
-                                                        <span class="text-primary">@food.Price.ToString("C", new CultureInfo("en-US"))</span>
+                                                        <span class="text-primary">@food.Price.ToString("C", new CultureInfo("vi-VN"))</span>
                                                     </h5>
                                                     @if (!string.IsNullOrEmpty(food.Description))
                                                     {
@@ -110,7 +111,7 @@
                                                 <div class="w-100 d-flex flex-column text-start ps-4">
                                                     <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                         <span>@drink.Name</span>
-                                                        <span class="text-primary">@drink.Price.ToString("C", new CultureInfo("en-US"))</span>
+                                                        <span class="text-primary">@drink.Price.ToString("C", new CultureInfo("vi-VN"))</span>
                                                     </h5>
                                                     @if (!string.IsNullOrEmpty(drink.Description))
                                                     {
@@ -143,7 +144,7 @@
                                                 <div class="w-100 d-flex flex-column text-start ps-4">
                                                     <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                         <span>@combo.Name</span>
-                                                        <span class="text-primary">@combo.Price.ToString("C", new CultureInfo("en-US"))</span>
+                                                        <span class="text-primary">@combo.Price.ToString("C", new CultureInfo("vi-VN"))</span>
                                                     </h5>
                                                     @if (!string.IsNullOrEmpty(combo.Description))
                                                     {
