--- a/WebApp/Views/Shared/_AdminNavbar.cshtml
+++ b/WebApp/Views/Shared/_AdminNavbar.cshtml
@@ -25,7 +25,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="FeedbackList">Manager Feedback</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="OrderList">Manager Order</a>
+                                <a class="nav-link text-dark" asp-area="OrderList" asp-controller="Admin" asp-action="OrderList">Manager Order</a>
                             </li>
                         </ul>
                     </div>
