--- a/WebApp/Views/Admin/OrderList.cshtml
+++ b/WebApp/Views/Admin/OrderList.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Order List";
 }
-<div class="container mt-5">
+<div class="container admin-margin mt-5">
     <h2 class="mb-4">Manage Orders</h2>
     <table class="table table-striped table-hover" id="orderTable" width="100%">
         <thead class="table-dark">
             <tr>
-                <th>Order ID</th>
+                <th>No</th>
                 <th>Customer</th>
                 <th>Total Price</th>
                 <th>Order Date</th>
