--- a/WebApp/Views/Admin/OrderList.cshtml
+++ b/WebApp/Views/Admin/OrderList.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Order List";
 }
-<div class="container admin-margin mt-5">
+<div class="admin-margin">
     <h2 class="mb-4">Manage Orders</h2>
     <table class="table table-striped table-hover" id="orderTable" width="100%">
         <thead class="table-dark">
