--- a/WebApp/Views/Admin/ViewProductFeedback.cshtml
+++ b/WebApp/Views/Admin/ViewProductFeedback.cshtml
@@ -90,7 +90,7 @@
                                         @foreach(var image in feedback.Images)
                                         {
                                             <a class="venobox" data-gall="gallery01" data-fitview="true" href="/img/products/@image.ImagePath">
-                                                <img src="/img/products/@image.ImagePath" alt="Review Image" />
+                                                <img src="/img/feedbacks/@image.ImagePath" alt="Review Image" />
                                             </a>
                                         }                                      
                                     </div>
