--- a/WebApp/Views/Admin/Index.cshtml
+++ b/WebApp/Views/Admin/Index.cshtml
@@ -83,7 +83,7 @@
                                     <div class="col">
                                         <div class="progress progress-sm mr-2">
                                             <div class="progress-bar bg-warning" role="progressbar"
-                                                 style="width: @(avgRating/5)" aria-valuenow="@(avgRating/5*100)" aria-valuemin="0"
+                                                 style="width:   @(avgRating != null ? avgRating / 5 * 100 : 0)%" aria-valuenow="@(avgRating/5*100)" aria-valuemin="0"
                                                  aria-valuemax="100"></div>
                                         </div>
                                     </div>
